--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,23 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+	<title> CV </title>
+	<link rel="stylesheet" type="text/css" href="cv.css">
+</head>
+	<body>
+<table width="100%" border="1">
+	<tr>
+		<td> <strong>CHAIB Sara </strong></td>
+		<td>Céibataire</td>
+	</tr>
+	<tr>
+		<td>9330 Neuill Plaissance</td>
+		<td> Permis B</td>
+	</tr>
+	<tr>
+		<td>0652582642</td>
+		<td> </td>
+	</tr>
+	<tr>
+		<td> <i>chaib-sara@outlook.com </i></td>
+		<td> </td>
+	</tr>
+</table>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP1</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+	<h1> <b><center> Ingénieur d'études et dévloppement </center></b></h1>
+	<h1>Formations</h1>
+	<table width="100%" border="1">
+	<tr>
+		<td>2016</td>
+
+		<td>  <a href="https://www.univ-paris13.fr/" target="blank"> Master 2 3IR  </a> à paris 13 </td>
+	</tr>
+	<tr>
+		<td> 2014 </td>
+		<td> <a href="http://www.usthb.dz/spip.php?article182" target="blank">Licence éléctronique et élécommunication </a> à USTHB à Alger </td>
+	</tr>
+	<tr>
+		<td> 2011 </td>
+		<td> Bac S </td>
+	</tr>
+		
+	</table>
+
+	<h1>Compétances</h1>
+	<table width="100%" border="1">
+		<tr>
+			<td> Développement </td> 
+			<td> Java 7. HTML</td>
+		</tr>
+		<tr>
+			<td>Base de données</td>
+			<td> MySQL PostgreSQL</td>
+		</tr>
+		<tr>
+			<td> Réseaux </td>
+			<td> IPV6, LAN, WIFI</td>
+		</tr>
+		<tr>
+			<td>langues</td>
+			<td> Anglais, Français, Arabe </td>
+		</tr>
+
+	</table>
+
+	<h1> Experiences</h1>
+	<table width="100%" border="1">
+		<tr>
+			<td>2016</td>
+			<td> Stage de fin d'études chez
+			<span class="imgA">
+			<span class="txtA">Orange</span>
+			 
+			 <img src="img/Orange_logo.svg.png" alt="Orange"></td>
+			 </span>
+		</tr>
+			<td>2014</td>
+			<td>stage chez 
+			<span class="imgA">
+			<span class="textA">CGI</span>
+			 <img src="img/cgii.jpg" alt="cgi"> </td>
+			</span>
+
+		<tr>
+			<td> 2011 </td>
+			<td> BAC S</td>	
+		</tr>
+	</table>
+	<h1> Centre d'intérêts</h1>
+	<table width="100%" border="1">
+		<tr>
+			<td>Sport</td>
+			<td> Natation, Tennis</td>
+		</tr>
+			<td>culture</td>
+			<td>Cinéma, Musé> </td>
+		<tr>
+			<td> voyages </td>
+			<td>Angleterre, Espagne</td>	
+		</tr>
+	</table>
+	</body>
 </html>
+
