--- a/tp1/index.html
+++ b/tp1/index.html
@@ -45,7 +45,7 @@
 		
 	</table>
 
-	<h1>Compétances</h1>
+	<h1>Compétences</h1>
 	<table width="100%" border="1">
 		<tr>
 			<td> Développement </td> 
@@ -74,14 +74,14 @@
 			<span class="imgA">
 			<span class="txtA">Orange</span>
 			 
-			 <img src="img/Orange_logo.svg.png" alt="Orange"></td>
+			 <img src="Orange_logo.svg.png" alt="Orange"></td>
 			 </span>
 		</tr>
 			<td>2014</td>
 			<td>stage chez 
 			<span class="imgA">
 			<span class="textA">CGI</span>
-			 <img src="img/cgii.jpg" alt="cgi"> </td>
+			 <img src="cgii.jpg" alt="cgi"> </td>
 			</span>
 
 		<tr>
